--- a/Source/ChocolateyGui.Common.Windows/Controls/Dialogs/AdvancedChocolateyDialog.xaml
+++ b/Source/ChocolateyGui.Common.Windows/Controls/Dialogs/AdvancedChocolateyDialog.xaml
@@ -1,5 +1,4 @@
-﻿<MahDialogs:CustomDialog x:Class="ChocolateyGui.Common.Windows.Controls.Dialogs.AdvancedChocolateyDialog"
-             xmlns:MahDialogs="clr-namespace:MahApps.Metro.Controls.Dialogs;assembly=MahApps.Metro"
+﻿<UserControl x:Class="ChocolateyGui.Common.Windows.Controls.Dialogs.AdvancedChocolateyDialog"
              xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -7,55 +6,53 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              mc:Ignorable="d"
              d:DesignHeight="450" d:DesignWidth="800">
-    <MahDialogs:CustomDialog.Content>
-        <Grid Margin="0,10,0,0">
+    <Grid Margin="0,10,0,0" FocusManager.FocusedElement="{Binding ElementName=PackageParametersTextBox}" Grid.IsSharedSizeScope="True">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+        </Grid.RowDefinitions>
+        <Grid Grid.Row="0">
             <Grid.RowDefinitions>
-                <RowDefinition Height="Auto" />
-                <RowDefinition Height="Auto" />
+                <RowDefinition Height="30"/>
+                <RowDefinition Height="30"/>
+                <RowDefinition Height="30"/>
+                <RowDefinition Height="30"/>
             </Grid.RowDefinitions>
-            <Grid Grid.Row="0">
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="30"/>
-                    <RowDefinition Height="30"/>
-                    <RowDefinition Height="30"/>
-                    <RowDefinition Height="30"/>
-                </Grid.RowDefinitions>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="150" />
-                    <ColumnDefinition Width="*" />
-                </Grid.ColumnDefinitions>
-                <Label Grid.Row="0" Grid.Column="0">Version</Label>
-                <TextBox Grid.Row="0" Grid.Column="1" />
-                <Label Grid.Row="1" Grid.Column="0">Package Parameters</Label>
-                <TextBox Grid.Row="1" Grid.Column="1" />
-                <Label Grid.Row="2" Grid.Column="0">Install Arguments</Label>
-                <TextBox Grid.Row="2" Grid.Column="1" />
-            </Grid>
-            <StackPanel
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="150" />
+                <ColumnDefinition Width="*" />
+            </Grid.ColumnDefinitions>
+            <Label Grid.Row="0" Grid.Column="0">Version</Label>
+            <ComboBox ItemsSource="{Binding AvailableVersions}" SelectedItem="{Binding SelectedVersion}" />
+            <Label Grid.Row="1" Grid.Column="0">Package Parameters</Label>
+            <TextBox Grid.Row="1" Grid.Column="1" Name="PackageParametersTextBox" Text="{Binding PackageParameters, UpdateSourceTrigger=PropertyChanged}" />
+            <Label Grid.Row="2" Grid.Column="0">Install Arguments</Label>
+            <TextBox Grid.Row="2" Grid.Column="1" Name="InstallArgumentsTextBox" Text="{Binding InstallArguments, UpdateSourceTrigger=PropertyChanged}" />
+        </Grid>
+        <StackPanel
                 Grid.Row="1"
                 HorizontalAlignment="Right"
                 Orientation="Horizontal">
-                <Button
-                    x:Name="PART_AffirmativeButton"
+            <Button
+                    x:Name="InstallButton"
                     Height="35"
                     MinWidth="80"
                     Margin="0,0,5,0"
                     mah:ControlsHelper.ContentCharacterCasing="Normal"
-                    Click="PART_AffirmativeButton_OnClick"
-                    Content="OK"
+                    Content="Install"
                     IsDefault="True"
-                    Style="{DynamicResource MahApps.Styles.Button.Dialogs.Accent}" />
-                <Button
-                    x:Name="PART_NegativeButton"
+                    Command="{Binding InstallCommand}"
+                    Style="{DynamicResource MahApps.Styles.Button.Dialogs}"/>
+            <Button
+                    x:Name="CancelButton"
                     Height="35"
                     MinWidth="80"
                     Margin="5,0,5,0"
                     mah:ControlsHelper.ContentCharacterCasing="Normal"
-                    Click="PART_NegativeButton_OnClick"
                     Content="Cancel"
                     IsCancel="True"
-                    Style="{DynamicResource MahApps.Styles.Button.Dialogs.Accent}" />
-            </StackPanel>
-        </Grid>
-    </MahDialogs:CustomDialog.Content>
-</MahDialogs:CustomDialog>
+                    Command="{Binding CancelCommand}"
+                    Style="{DynamicResource MahApps.Styles.Button.Dialogs}" />
+        </StackPanel>
+    </Grid>
+</UserControl>
