--- a/Source/ChocolateyGui.Common.Windows/Controls/Dialogs/AdvancedChocolateyDialog.xaml
+++ b/Source/ChocolateyGui.Common.Windows/Controls/Dialogs/AdvancedChocolateyDialog.xaml
@@ -5,12 +5,20 @@
              xmlns:items="clr-namespace:ChocolateyGui.Common.Windows.ViewModels.Items"
              xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:properties="clr-namespace:ChocolateyGui.Common.Properties;assembly=ChocolateyGui.Common"
              MaxHeight="500"
              d:DataContext="{d:DesignInstance items:AdvancedInstallViewModel}"
              d:DesignHeight="450"
              d:DesignWidth="800"
              mc:Ignorable="d">
-
+    <UserControl.Resources>
+        <Style TargetType="{x:Type mah:ToggleSwitch}" BasedOn="{StaticResource ToggleSwitch.Win10.Override}">
+            <Setter Property="Margin" Value="0 5"/>
+            <Setter Property="mah:ControlsHelper.HeaderMargin" Value="0 0 0 10"/>
+            <Setter Property="OnLabel" Value="{x:Static properties:Resources.AdvancedChocolateyDialog_On}"/>
+            <Setter Property="OffLabel" Value="{x:Static properties:Resources.AdvancedChocolateyDialog_Off}"/>
+        </Style>
+    </UserControl.Resources>
     <Grid Margin="0 10 0 0"
           FocusManager.FocusedElement="{Binding ElementName=AvailableVersionsComboBox}"
           Grid.IsSharedSizeScope="True">
@@ -80,87 +88,147 @@
                     <Grid.RowDefinitions>
                         <RowDefinition Height="*" />
                         <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
                     </Grid.RowDefinitions>
 
                     <StackPanel Grid.Row="0"
                                 Margin="5 0 5 0"
                                 Orientation="Vertical">
-                        <HeaderedContentControl Header="Version">
+                        <HeaderedContentControl
+                            Header="{x:Static properties:Resources.AdvancedChocolateyDialog_Version_Header}"
+                            ToolTip="{x:Static properties:Resources.AdvancedChocolateyDialog_Version_ToolTip}">
                             <ComboBox x:Name="AvailableVersionsComboBox"
                                       ItemsSource="{Binding AvailableVersions}"
                                       SelectedItem="{Binding SelectedVersion}" />
                         </HeaderedContentControl>
-                        <HeaderedContentControl Header="Package Parameters">
+                        <HeaderedContentControl
+                            Header="{x:Static properties:Resources.AdvancedChocolateyDialog_PackageParameters_Header}"
+                            ToolTip="{x:Static properties:Resources.AdvancedChocolateyDialog_PackageParameters_ToolTip}">
                             <TextBox Text="{Binding PackageParameters, UpdateSourceTrigger=PropertyChanged}" />
                         </HeaderedContentControl>
-                        <HeaderedContentControl Header="Install Arguments">
+                        <HeaderedContentControl
+                            Header="{x:Static properties:Resources.AdvancedChocolateyDialog_InstallArguments_Header}"
+                            ToolTip="{x:Static properties:Resources.AdvancedChocolateyDialog_InstallArguments_ToolTip}">
                             <TextBox Text="{Binding InstallArguments, UpdateSourceTrigger=PropertyChanged}" />
                         </HeaderedContentControl>
-                        <HeaderedContentControl Header="Execution Timeout In Seconds">
+                        <HeaderedContentControl
+                            Header="{x:Static properties:Resources.AdvancedChocolateyDialog_ExecutionTimeoutInSeconds_Header}"
+                            ToolTip="{x:Static properties:Resources.AdvancedChocolateyDialog_ExecutionTimeoutInSeconds_ToolTip}">
                             <mah:NumericUpDown Value="{Binding ExecutionTimeoutInSeconds}" />
                         </HeaderedContentControl>
-                        <HeaderedContentControl Header="Log File">
-                            <TextBox Text="{Binding LogFile}" />
+                        <HeaderedContentControl
+                            Header="{x:Static properties:Resources.AdvancedChocolateyDialog_PreRelease_Header}"
+                            ToolTip="{x:Static properties:Resources.AdvancedChocolateyDialog_PreRelease_ToolTip}">
+                            <mah:ToggleSwitch VerticalAlignment="Center" IsChecked="{Binding PreRelease}" />
                         </HeaderedContentControl>
-                        <HeaderedContentControl Header="PreRelease">
-                            <CheckBox IsChecked="{Binding PreRelease}" />
-                        </HeaderedContentControl>
-                        <HeaderedContentControl Header="Force x86">
-                            <CheckBox IsChecked="{Binding Forcex86}" />
-                        </HeaderedContentControl>
-                        <HeaderedContentControl Header="Override Arguments">
-                            <CheckBox IsChecked="{Binding OverrideArguments}" />
-                        </HeaderedContentControl>
-                        <HeaderedContentControl Header="Not Silent">
-                            <CheckBox IsChecked="{Binding NotSilent}" />
-                        </HeaderedContentControl>
-                        <HeaderedContentControl Header="Apply Install Arguments to Dependencies">
-                            <CheckBox IsChecked="{Binding ApplyInstallArgumentsToDependencies}" />
-                        </HeaderedContentControl>
-                        <HeaderedContentControl Header="Apply Package Parameters to Dependencies">
-                            <CheckBox IsChecked="{Binding ApplyPackageParametersToDependencies}" />
-                        </HeaderedContentControl>
-                        <HeaderedContentControl Header="Allow Downgrade">
-                            <CheckBox IsChecked="{Binding AllowDowngrade}" />
-                        </HeaderedContentControl>
-                        <HeaderedContentControl Header="Allow Multiple Versions">
-                            <CheckBox IsChecked="{Binding AllowMultipleVersions}" />
-                        </HeaderedContentControl>
-                        <HeaderedContentControl Header="Ignore Dependencies">
-                            <CheckBox IsChecked="{Binding IgnoreDependencies}" />
-                        </HeaderedContentControl>
-                        <HeaderedContentControl Header="Force Dependencies">
-                            <CheckBox IsChecked="{Binding ForceDependencies}" />
-                        </HeaderedContentControl>
-                        <HeaderedContentControl Header="Skip PowerShell">
-                            <CheckBox IsChecked="{Binding SkipPowerShell}" />
+                        <HeaderedContentControl
+                            Header="{x:Static properties:Resources.AdvancedChocolateyDialog_Forcex86_Header}"
+                            ToolTip="{x:Static properties:Resources.AdvancedChocolateyDialog_Forcex86_ToolTip}">
+                            <mah:ToggleSwitch VerticalAlignment="Center" IsChecked="{Binding Forcex86}" />
                         </HeaderedContentControl>
                     </StackPanel>
 
-                    <Expander Grid.Row="1">
+                    <Expander Grid.Row="1" Header="{x:Static properties:Resources.AdvancedChocolateyDialog_AdvancedOptions_Header}">
                         <StackPanel Orientation="Vertical">
-                            <HeaderedContentControl Header="Ignore Checksums">
-                                <CheckBox IsChecked="{Binding IgnoreChecksums}" />
+                            <HeaderedContentControl
+                                Header="{x:Static properties:Resources.AdvancedChocolateyDialog_LogFile_Header}"
+                                ToolTip="{x:Static properties:Resources.AdvancedChocolateyDialog_LogFile_ToolTip}">
+                                <TextBox Text="{Binding LogFile}" />
                             </HeaderedContentControl>
-                            <HeaderedContentControl Header="Allow Empty Checksums">
-                                <CheckBox IsChecked="{Binding AllowEmptyChecksums}" />
+                            <HeaderedContentControl
+                                Header="{x:Static properties:Resources.AdvancedChocolateyDialog_OverrideArguments_Header}"
+                                ToolTip="{x:Static properties:Resources.AdvancedChocolateyDialog_OverrideArguments_ToolTip}">
+                                <mah:ToggleSwitch VerticalAlignment="Center" IsChecked="{Binding OverrideArguments}" />
                             </HeaderedContentControl>
-                            <HeaderedContentControl Header="Allow Empty Checksums Secure">
-                                <CheckBox IsChecked="{Binding AllowEmptyChecksumsSecure}" />
+                            <HeaderedContentControl
+                                Header="{x:Static properties:Resources.AdvancedChocolateyDialog_NotSilent_Header}"
+                                ToolTip="{x:Static properties:Resources.AdvancedChocolateyDialog_NotSilent_ToolTip}">
+                                <mah:ToggleSwitch VerticalAlignment="Center" IsChecked="{Binding NotSilent}" />
                             </HeaderedContentControl>
-                            <HeaderedContentControl Header="Require Checksums">
-                                <CheckBox IsChecked="{Binding RequireChecksums}" />
+                            <HeaderedContentControl
+                                Header="{x:Static properties:Resources.AdvancedChocolateyDialog_AllowDowngrade_Header}"
+                                ToolTip="{x:Static properties:Resources.AdvancedChocolateyDialog_AllowDowngrade_ToolTip}">
+                                <mah:ToggleSwitch VerticalAlignment="Center" IsChecked="{Binding AllowDowngrade}" />
                             </HeaderedContentControl>
-                            <HeaderedContentControl Header="Download Checksum">
+                            <HeaderedContentControl
+                                Header="{x:Static properties:Resources.AdvancedChocolateyDialog_AllowMultipleVersions_Header}"
+                                ToolTip="{x:Static properties:Resources.AdvancedChocolateyDialog_AllowMultipleVersions_ToolTip}">
+                                <mah:ToggleSwitch VerticalAlignment="Center" IsChecked="{Binding AllowMultipleVersions}" />
+                            </HeaderedContentControl>
+                            <HeaderedContentControl
+                                Header="{x:Static properties:Resources.AdvancedChocolateyDialog_SkipPowerShell_Header}"
+                                ToolTip="{x:Static properties:Resources.AdvancedChocolateyDialog_SkipPowerShell_ToolTip}">
+                                <mah:ToggleSwitch VerticalAlignment="Center" IsChecked="{Binding SkipPowerShell}" />
+                            </HeaderedContentControl>
+                        </StackPanel>
+                    </Expander>
+
+                    <Expander Grid.Row="2" Header="{x:Static properties:Resources.AdvancedChocolateyDialog_DependencyOptions_Header}">
+                        <StackPanel Orientation="Vertical">
+                            <HeaderedContentControl
+                                Header="{x:Static properties:Resources.AdvancedChocolateyDialog_IgnoreDependencies_Header}"
+                                ToolTip="{x:Static properties:Resources.AdvancedChocolateyDialog_IgnoreDependencies_ToolTip}">
+                                <mah:ToggleSwitch VerticalAlignment="Center" IsChecked="{Binding IgnoreDependencies}" />
+                            </HeaderedContentControl>
+                            <HeaderedContentControl
+                                Header="{x:Static properties:Resources.AdvancedChocolateyDialog_ForceDependencies_Header}"
+                                ToolTip="{x:Static properties:Resources.AdvancedChocolateyDialog_ForceDependencies_ToolTip}">
+                                <mah:ToggleSwitch VerticalAlignment="Center" IsChecked="{Binding ForceDependencies}" />
+                            </HeaderedContentControl>
+                            <HeaderedContentControl
+                                Header="{x:Static properties:Resources.AdvancedChocolateyDialog_ApplyInstallArgumentsToDependencies_Header}"
+                                ToolTip="{x:Static properties:Resources.AdvancedChocolateyDialog_ApplyInstallArgumentsToDependencies_ToolTip}">
+                                <mah:ToggleSwitch VerticalAlignment="Center" IsChecked="{Binding ApplyInstallArgumentsToDependencies}" />
+                            </HeaderedContentControl>
+                            <HeaderedContentControl
+                                Header="{x:Static properties:Resources.AdvancedChocolateyDialog_ApplyPackageParametersToDependencies_Header}"
+                                ToolTip="{x:Static properties:Resources.AdvancedChocolateyDialog_ApplyPackageParametersToDependencies_ToolTip}">
+                                <mah:ToggleSwitch VerticalAlignment="Center" IsChecked="{Binding ApplyPackageParametersToDependencies}" />
+                            </HeaderedContentControl>
+                        </StackPanel>
+                    </Expander>
+
+                    <Expander Grid.Row="3" Header="{x:Static properties:Resources.AdvancedChocolateyDialog_ChecksumOptions_Header}">
+                        <StackPanel Orientation="Vertical">
+                            <HeaderedContentControl
+                                Header="{x:Static properties:Resources.AdvancedChocolateyDialog_IgnoreChecksums_Header}"
+                                ToolTip="{x:Static properties:Resources.AdvancedChocolateyDialog_IgnoreChecksums_ToolTip}">
+                                <mah:ToggleSwitch VerticalAlignment="Center" IsChecked="{Binding IgnoreChecksums}" />
+                            </HeaderedContentControl>
+                            <HeaderedContentControl
+                                Header="{x:Static properties:Resources.AdvancedChocolateyDialog_AllowEmptyChecksums_Header}"
+                                ToolTip="{x:Static properties:Resources.AdvancedChocolateyDialog_AllowEmptyChecksums_ToolTip}">
+                                <mah:ToggleSwitch VerticalAlignment="Center" IsChecked="{Binding AllowEmptyChecksums}" />
+                            </HeaderedContentControl>
+                            <HeaderedContentControl
+                                Header="{x:Static properties:Resources.AdvancedChocolateyDialog_AllowEmptyChecksumsSecure_Header}"
+                                ToolTip="{x:Static properties:Resources.AdvancedChocolateyDialog_AllowEmptyChecksumsSecure_ToolTip}">
+                                <mah:ToggleSwitch VerticalAlignment="Center" IsChecked="{Binding AllowEmptyChecksumsSecure}" />
+                            </HeaderedContentControl>
+                            <HeaderedContentControl
+                                Header="{x:Static properties:Resources.AdvancedChocolateyDialog_RequireChecksums_Header}"
+                                ToolTip="{x:Static properties:Resources.AdvancedChocolateyDialog_RequireChecksums_ToolTip}">
+                                <mah:ToggleSwitch VerticalAlignment="Center" IsChecked="{Binding RequireChecksums}" />
+                            </HeaderedContentControl>
+                            <HeaderedContentControl
+                                Header="{x:Static properties:Resources.AdvancedChocolateyDialog_DownloadChecksum_Header}"
+                                ToolTip="{x:Static properties:Resources.AdvancedChocolateyDialog_DownloadChecksum_ToolTip}">
                                 <TextBox Text="{Binding DownloadChecksum}" />
                             </HeaderedContentControl>
-                            <HeaderedContentControl Header="Download Checksum 64bit">
+                            <HeaderedContentControl
+                                Header="{x:Static properties:Resources.AdvancedChocolateyDialog_DownloadChecksum64bit_Header}"
+                                ToolTip="{x:Static properties:Resources.AdvancedChocolateyDialog_DownloadChecksum64bit_ToolTip}">
                                 <TextBox Text="{Binding DownloadChecksum64bit}" />
                             </HeaderedContentControl>
-                            <HeaderedContentControl Header="Download Checksum Type">
+                            <HeaderedContentControl
+                                Header="{x:Static properties:Resources.AdvancedChocolateyDialog_DownloadChecksumType_Header}"
+                                ToolTip="{x:Static properties:Resources.AdvancedChocolateyDialog_DownloadChecksumType_ToolTip}">
                                 <TextBox Text="{Binding DownloadChecksumType}" />
                             </HeaderedContentControl>
-                            <HeaderedContentControl Header="Download Checksum Type 64bit">
+                            <HeaderedContentControl
+                                Header="{x:Static properties:Resources.AdvancedChocolateyDialog_DownloadChecksumType64bit_Header}"
+                                ToolTip="{x:Static properties:Resources.AdvancedChocolateyDialog_DownloadChecksumType64bit_ToolTip}">
                                 <TextBox Text="{Binding DownloadChecksumType64bit}" />
                             </HeaderedContentControl>
                         </StackPanel>
@@ -179,7 +247,7 @@
                     Margin="0 0 5 0"
                     mah:ControlsHelper.ContentCharacterCasing="Normal"
                     Command="{Binding InstallCommand}"
-                    Content="Install"
+                    Content="{x:Static properties:Resources.AdvancedChocolateyDialog_Buttons_Install}"
                     IsDefault="True"
                     Style="{DynamicResource MahApps.Styles.Button.Dialogs}" />
             <Button x:Name="CancelButton"
@@ -188,7 +256,7 @@
                     Margin="5 0 0 0"
                     mah:ControlsHelper.ContentCharacterCasing="Normal"
                     Command="{Binding CancelCommand}"
-                    Content="Cancel"
+                    Content="{x:Static properties:Resources.AdvancedChocolateyDialog_Buttons_Cancel}"
                     IsCancel="True"
                     Style="{DynamicResource MahApps.Styles.Button.Dialogs}" />
         </StackPanel>
